--- a/index.html
+++ b/index.html
@@ -5,9 +5,67 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tasks</title>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/2d0a1576d1.js" crossorigin="anonymous"></script>
+    <title>Task</title>
 </head>
 <body>
+<div class="container">
+    <!-- Page Content goes here -->
+    <div class="row">
+        <div class="col s12 m6">
+            <div class="card white ">
+                <div class="card-content ">
+                    <span class="card-title">Add tasks</span>
+                    <div class="row">
+                        <form class="col s12">
+                            <div class="row">
+                                <div class="input-field col s6">
+                                    <input placeholder="Placeholder" id="first_name" type="text" >
+                                    <label for="first_name">First Name</label>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col s6">
+                                    <input type="submit" value="Add task" class="btn">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="card-action">
+                    <span class="card-title">Add tasks</span>
+                    <ul class="collection">
+                        <li class="collection-item">
+                            My First Task
+                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>
+                        </li>
+                        <li class="collection-item">
+                            My Second Task
+                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>
+                        </li>
+                        <li class="collection-item">
+                            My Third Task
+                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>
+                        </li>
+                        <li class="collection-item">
+                            My Last Task
+                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>
+                        </li>
+                    </ul>
+                    <a href="#" class="btn">Clear All Tasks</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
