Create add task functionality.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         <form class="col s12">
                             <div class="row">
                                 <div class="input-field col s6">
-                                    <input placeholder="Placeholder" id="first_name" type="text" >
-                                    <label for="first_name">First Name</label>
+                                    <input placeholder="Placeholder" id="task" type="text" >
+                                    <label for="task">First Name</label>
                                 </div>
 
                             </div>
@@ -40,22 +40,22 @@
                 <div class="card-action">
                     <span class="card-title">Add tasks</span>
                     <ul class="collection">
-                        <li class="collection-item">
-                            My First Task
-                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>
-                        </li>
-                        <li class="collection-item">
-                            My Second Task
-                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>
-                        </li>
-                        <li class="collection-item">
-                            My Third Task
-                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>
-                        </li>
-                        <li class="collection-item">
-                            My Last Task
-                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>
-                        </li>
+<!--                        <li class="collection-item">-->
+<!--                            My First Task-->
+<!--                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>-->
+<!--                        </li>-->
+<!--                        <li class="collection-item">-->
+<!--                            My Second Task-->
+<!--                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>-->
+<!--                        </li>-->
+<!--                        <li class="collection-item">-->
+<!--                            My Third Task-->
+<!--                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>-->
+<!--                        </li>-->
+<!--                        <li class="collection-item">-->
+<!--                            My Last Task-->
+<!--                            <a href="#" class="teal-text lighten-2 secondary-content">X</a>-->
+<!--                        </li>-->
                     </ul>
                     <a href="#" class="btn">Clear All Tasks</a>
                 </div>
